# smc_cli

./: Cargo.toml  LICENSE  Makefile  README.md  relay-start.sh
src/: analytics.rs  config.rs  display.rs  lib.rs  main.rs  models.rs  relay.rs  search.rs  session.rs
src/cmd/: context.rs  export.rs  freq.rs  mod.rs  projects.rs  recent.rs  search.rs  sessions.rs  show.rs  stats.rs  tools.rs
src/output/: emit.rs  mod.rs  records.rs
src/util/: discover.rs  mod.rs  tokens.rs
