[package]
name = "rustyscalpel"
version = "0.3.0"
edition = "2021"
description = "Surgical search through Claude Code JSONL conversation logs"

[[bin]]
name = "smc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"
memmap2 = "0.9"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
