[package]
name = "smc-cli-cc"
version = "0.4.1"
edition = "2021"
description = "Surgical search through Claude Code JSONL conversation logs"
license = "MIT"
repository = "https://github.com/scalecode-solutions/smc_cli"
homepage = "https://github.com/scalecode-solutions/smc_cli"
keywords = ["claude", "search", "jsonl", "cli", "logs"]
categories = ["command-line-utilities"]

[[bin]]
name = "smc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"
memmap2 = "0.9"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
