[package]
name = "smc-cli-cc"
version = "0.8.0"
edition = "2021"
rust-version = "1.70"
description = "Surgical search through Claude Code JSONL conversation logs"
license = "MIT"
repository = "https://github.com/scalecode-solutions/smc_cli"
homepage = "https://github.com/scalecode-solutions/smc_cli"
keywords = ["claude", "search", "jsonl", "cli", "logs"]
categories = ["command-line-utilities"]

[lib]
name = "smc"
path = "src/lib.rs"

[[bin]]
name = "smc"
path = "src/bin/smc.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
